maven-surefire-plugin is added.