@@ -71,6 +71,16 @@
 				</executions>
 			</plugin>
 			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.17</version>
+			    <configuration>
+		        	<forkCount>3</forkCount>
+		        	<reuseForks>true</reuseForks>
+		        	<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+		    	</configuration>
+		  	</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.4.2</version>
